--- a/html/gallery.html
+++ b/html/gallery.html
@@ -22,12 +22,12 @@
                     <span class="navbar-toggler-icon"></span>
                 </button>
                 <div id="logo" class="navbar-text col-6">
-                        <h1><a href="pocetna.html">Marina Tovirac</a></h1>
+                        <h1><a href="../index.html">Marina Tovirac</a></h1>
                 </div>
                 <div class="collapse navbar-collapse col-6" id="collapse_target">
                     <div id="navigacija">
                         <ul class="navbar-nav">
-                            <li class="nav-item"><a class="nav-link" href="pocetna.html">Home</a></li>
+                            <li class="nav-item"><a class="nav-link" href="../index.html">Home</a></li>
                             <li class="nav-item"><a class="nav-link" href="gallery.html">Portfolio</a></li>
                             <li class="nav-item"><a class="nav-link" href="contact.html">Contact</a></li>
                         </ul>
