--- a/index.html
+++ b/index.html
@@ -5,9 +5,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link href="https://fonts.googleapis.com/css?family=Dancing+Script" rel="stylesheet">
-    <link rel="stylesheet" href="../css/style.css">
-    <link rel="stylesheet" type="text/css" href="../slick/slick.css"/>
-    <link rel="stylesheet" type="text/css" href="../slick/slick-theme.css"/>
+    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" type="text/css" href="slick/slick.css"/>
+    <link rel="stylesheet" type="text/css" href="slick/slick-theme.css"/>
     <script type="text/javascript" src="http://code.jquery.com/jquery-3.4.1.js"></script>
     <script type="text/javascript" src="http://code.jquery.com/jquery-migrate-3.1.0.js"></script>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
@@ -22,14 +22,14 @@
                     <span class="navbar-toggler-icon"></span>
                 </button>
                 <div id="logo" class="navbar-text col-6">
-                        <h1><a href="pocetna.html">Marina Tovirac</a></h1>
+                        <h1><a href="index.html">Marina Tovirac</a></h1>
                 </div>
                 <div class="collapse navbar-collapse col-6" id="collapse_target">
                     <div id="navigacija">
                         <ul class="navbar-nav">
-                            <li class="nav-item"><a class="nav-link" href="pocetna.html">Home</a></li>
-                            <li class="nav-item"><a class="nav-link" href="gallery.html">Portfolio</a></li>
-                            <li class="nav-item"><a class="nav-link" href="contact.html">Contact</a></li>
+                            <li class="nav-item"><a class="nav-link" href="index.html">Home</a></li>
+                            <li class="nav-item"><a class="nav-link" href="html/gallery.html">Portfolio</a></li>
+                            <li class="nav-item"><a class="nav-link" href="html/contact.html">Contact</a></li>
                         </ul>
                     </div>
                     
@@ -38,11 +38,11 @@
         </header>
         <main>
             <div class="galerija">
-                <div><img src="../images/IMG_0001.jpg" alt="Alt text" srcset="../images/IMG_0001.jpg 600w" sizes="(min-width: 1200px) 500px, (min-width: 768px) 400px, (min-width: 375px) 300px, (min-width: 320px) 250px, calc(100vw - 36px)"></div>
-                <div><img src="../images/IMG_0002.jpg" alt="Alt text" srcset="../images/IMG_0002.jpg 600w" sizes="(min-width: 1200px) 500px, (min-width: 768px) 400px, (min-width: 375px) 300px, (min-width: 320px) 250px, calc(100vw - 36px)"></div>
-                <div><img src="../images/IMG_0003.jpg" alt="Alt text" srcset="../images/IMG_0003.jpg 600w" sizes="(min-width: 1200px) 500px, (min-width: 768px) 400px, (min-width: 375px) 300px, (min-width: 320px) 250px, calc(100vw - 36px)"></div>
-                <div><img src="../images/IMG_0004.jpg" alt="Alt text" srcset="../images/IMG_0004.jpg 600w" sizes="(min-width: 1200px) 500px, (min-width: 768px) 400px, (min-width: 375px) 300px, (min-width: 320px) 250px, calc(100vw - 36px)"></div>
-                <div><img src="../images/IMG_0005.jpg" alt="Alt text" srcset="../images/IMG_0005.jpg 600w" sizes="(min-width: 1200px) 500px, (min-width: 768px) 400px, (min-width: 375px) 300px, (min-width: 320px) 250px, calc(100vw - 36px)"></div>
+                <div><img src="images/IMG_0001.jpg" alt="Alt text" srcset="images/IMG_0001.jpg 600w" sizes="(min-width: 1200px) 500px, (min-width: 768px) 400px, (min-width: 375px) 300px, (min-width: 320px) 250px, calc(100vw - 36px)"></div>
+                <div><img src="images/IMG_0002.jpg" alt="Alt text" srcset="images/IMG_0002.jpg 600w" sizes="(min-width: 1200px) 500px, (min-width: 768px) 400px, (min-width: 375px) 300px, (min-width: 320px) 250px, calc(100vw - 36px)"></div>
+                <div><img src="images/IMG_0003.jpg" alt="Alt text" srcset="images/IMG_0003.jpg 600w" sizes="(min-width: 1200px) 500px, (min-width: 768px) 400px, (min-width: 375px) 300px, (min-width: 320px) 250px, calc(100vw - 36px)"></div>
+                <div><img src="images/IMG_0004.jpg" alt="Alt text" srcset="images/IMG_0004.jpg 600w" sizes="(min-width: 1200px) 500px, (min-width: 768px) 400px, (min-width: 375px) 300px, (min-width: 320px) 250px, calc(100vw - 36px)"></div>
+                <div><img src="images/IMG_0005.jpg" alt="Alt text" srcset="images/IMG_0005.jpg 600w" sizes="(min-width: 1200px) 500px, (min-width: 768px) 400px, (min-width: 375px) 300px, (min-width: 320px) 250px, calc(100vw - 36px)"></div>
             </div>
         </main>
         <footer>
@@ -56,8 +56,8 @@
     </div>
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
-    <script type="text/javascript" src="../slick/slick.min.js"></script>
-    <script src="../js/slickcontrol.js"></script>
+    <script type="text/javascript" src="slick/slick.min.js"></script>
+    <script src="js/slickcontrol.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>  
 </body>
