--- a/index.html
+++ b/index.html
@@ -42,8 +42,9 @@
                 <div><img src="images/IMG_0001.jpg" alt="Alt text" srcset="images/IMG_0001.jpg 600w" sizes="(min-width: 1200px) 500px, (min-width: 768px) 400px, (min-width: 375px) 300px, (min-width: 320px) 250px, calc(100vw - 36px)"></div>
                 <div><img src="images/IMG_0002.jpg" alt="Alt text" srcset="images/IMG_0002.jpg 600w" sizes="(min-width: 1200px) 500px, (min-width: 768px) 400px, (min-width: 375px) 300px, (min-width: 320px) 250px, calc(100vw - 36px)"></div>
                 <div><img src="images/IMG_0003.jpg" alt="Alt text" srcset="images/IMG_0003.jpg 600w" sizes="(min-width: 1200px) 500px, (min-width: 768px) 400px, (min-width: 375px) 300px, (min-width: 320px) 250px, calc(100vw - 36px)"></div>
-                <div><img src="images/IMG_0004.jpg" alt="Alt text" srcset="images/IMG_0004.jpg 600w" sizes="(min-width: 1200px) 500px, (min-width: 768px) 400px, (min-width: 375px) 300px, (min-width: 320px) 250px, calc(100vw - 36px)"></div>
-                <div><img src="images/IMG_0005.jpg" alt="Alt text" srcset="images/IMG_0005.jpg 600w" sizes="(min-width: 1200px) 500px, (min-width: 768px) 400px, (min-width: 375px) 300px, (min-width: 320px) 250px, calc(100vw - 36px)"></div>
+                <div><img src="images/IMG_0004.JPG" alt="Alt text" srcset="images/IMG_0004.JPG 600w" sizes="(min-width: 1200px) 500px, (min-width: 768px) 400px, (min-width: 375px) 300px, (min-width: 320px) 250px, calc(100vw - 36px)"></div>
+                <div><img src="images/IMG_0005.JPG" alt="Alt text" srcset="images/IMG_0005.JPG 600w" sizes="(min-width: 1200px) 500px, (min-width: 768px) 400px, (min-width: 375px) 300px, (min-width: 320px) 250px, calc(100vw - 36px)"></div>
+                <div><img src="images/IMG_0006.jpg" alt="Alt text" srcset="images/IMG_0006.jpg 600w" sizes="(min-width: 1200px) 500px, (min-width: 768px) 400px, (min-width: 375px) 300px, (min-width: 320px) 250px, calc(100vw - 36px)"></div>
             </div>
         </main>
         <footer>
