--- a/contact.html
+++ b/contact.html
@@ -5,9 +5,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link href="https://fonts.googleapis.com/css?family=Dancing+Script" rel="stylesheet">
-    <link rel="stylesheet" href="../css/style.css">
-    <link rel="stylesheet" type="text/css" href="../slick/slick.css"/>
-    <link rel="stylesheet" type="text/css" href="../slick/slick-theme.css"/>
+    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" type="text/css" href="slick/slick.css"/>
+    <link rel="stylesheet" type="text/css" href="slick/slick-theme.css"/>
     <script type="text/javascript" src="https://code.jquery.com/jquery-3.4.1.js"></script>
     <script type="text/javascript" src="https://code.jquery.com/jquery-migrate-3.1.0.js"></script>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
@@ -22,14 +22,14 @@
                     <span class="navbar-toggler-icon"></span>
                 </button>
                 <div id="logo" class="navbar-text col-6">
-                        <h1><a href="../index.html">Marina Tovirac</a></h1>
+                        <h1><a href="index">Marina Tovirac</a></h1>
                 </div>
                 <div class="collapse navbar-collapse col-6" id="collapse_target">
                     <div id="navigacija">
                         <ul class="navbar-nav">
-                            <li class="nav-item"><a class="nav-link" href="../index.html">Home</a></li>
-                            <li class="nav-item"><a class="nav-link" href="gallery.html">Portfolio</a></li>
-                            <li class="nav-item"><a class="nav-link" href="contact.html">Contact</a></li>
+                            <li class="nav-item"><a class="nav-link" href="index">Home</a></li>
+                            <li class="nav-item"><a class="nav-link" href="gallery">Portfolio</a></li>
+                            <li class="nav-item"><a class="nav-link" href="contact">Contact</a></li>
                         </ul>
                     </div>
                     
@@ -43,7 +43,7 @@
                     <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Pariatur fuga enim cum, eum et, saepe eos beatae amet nemo nam quae quod tenetur corporis hic eaque minus atque inventore repudiandae voluptas laboriosam ad ipsam mollitia veritatis. Numquam aspernatur temporibus, praesentium maxime eveniet cum dignissimos enim exercitationem omnis eius, magni molestias.</p>
                 </div>
                 <div class="info-right">
-                        <img src="../images/IMG_0000.jpg" alt="portrait">
+                        <img src="images/IMG_0000.jpg" alt="portrait">
                 </div>
             </div>
         </section>
