--- a/gallery.html
+++ b/gallery.html
@@ -5,9 +5,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link href="https://fonts.googleapis.com/css?family=Dancing+Script" rel="stylesheet">
-    <link rel="stylesheet" href="../css/style.css">
-    <link rel="stylesheet" type="text/css" href="../slick/slick.css"/>
-    <link rel="stylesheet" type="text/css" href="../slick/slick-theme.css"/>
+    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" type="text/css" href="slick/slick.css"/>
+    <link rel="stylesheet" type="text/css" href="slick/slick-theme.css"/>
     <script type="text/javascript" src="https://code.jquery.com/jquery-3.4.1.js"></script>
     <script type="text/javascript" src="https://code.jquery.com/jquery-migrate-3.1.0.js"></script>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
@@ -22,14 +22,14 @@
                     <span class="navbar-toggler-icon"></span>
                 </button>
                 <div id="logo" class="navbar-text col-6">
-                        <h1><a href="../index.html">Marina Tovirac</a></h1>
+                        <h1><a href="index">Marina Tovirac</a></h1>
                 </div>
                 <div class="collapse navbar-collapse col-6" id="collapse_target">
                     <div id="navigacija">
                         <ul class="navbar-nav">
-                            <li class="nav-item"><a class="nav-link" href="../index.html">Home</a></li>
-                            <li class="nav-item"><a class="nav-link" href="gallery.html">Portfolio</a></li>
-                            <li class="nav-item"><a class="nav-link" href="contact.html">Contact</a></li>
+                            <li class="nav-item"><a class="nav-link" href="index">Home</a></li>
+                            <li class="nav-item"><a class="nav-link" href="gallery">Portfolio</a></li>
+                            <li class="nav-item"><a class="nav-link" href="contact">Contact</a></li>
                         </ul>
                     </div>
                     
@@ -41,62 +41,62 @@
         <div class="row text-center text-lg-left">
             <div class="col-lg-3 col-md-4 col-6">
                 <a href="#" class="d-block mb-4 h-100">
-                    <img class="img-fluid img-thumbnail" src="../images/IMG_0007.jpg" alt="">
+                    <img class="img-fluid img-thumbnail" src="images/IMG_0007.jpg" alt="">
                 </a>
             </div>
             <div class="col-lg-3 col-md-4 col-6">
                 <a href="#" class="d-block mb-4 h-100">
-                    <img class="img-fluid img-thumbnail" src="../images/IMG_0008.jpg" alt="">
+                    <img class="img-fluid img-thumbnail" src="images/IMG_0008.jpg" alt="">
                 </a>
             </div>
             <div class="col-lg-3 col-md-4 col-6">
                 <a href="#" class="d-block mb-4 h-100">
-                    <img class="img-fluid img-thumbnail" src="../images/IMG_0009.jpg" alt="">
+                    <img class="img-fluid img-thumbnail" src="images/IMG_0009.jpg" alt="">
                 </a>
             </div>
             <div class="col-lg-3 col-md-4 col-6">
                 <a href="#" class="d-block mb-4 h-100">
-                    <img class="img-fluid img-thumbnail" src="../images/IMG_0010.jpg" alt="">
+                    <img class="img-fluid img-thumbnail" src="images/IMG_0010.jpg" alt="">
                 </a>
             </div>
             <div class="col-lg-3 col-md-4 col-6">
                 <a href="#" class="d-block mb-4 h-100">
-                    <img class="img-fluid img-thumbnail" src="../images/IMG_0011.jpg" alt="">
+                    <img class="img-fluid img-thumbnail" src="images/IMG_0011.jpg" alt="">
                 </a>
             </div>
             <div class="col-lg-3 col-md-4 col-6">
                 <a href="#" class="d-block mb-4 h-100">
-                    <img class="img-fluid img-thumbnail" src="../images/IMG_0012.jpg" alt="">
+                    <img class="img-fluid img-thumbnail" src="images/IMG_0012.jpg" alt="">
                 </a>
             </div>
             <div class="col-lg-3 col-md-4 col-6">
                 <a href="#" class="d-block mb-4 h-100">
-                    <img class="img-fluid img-thumbnail" src="../images/IMG_0013.jpg" alt="">
+                    <img class="img-fluid img-thumbnail" src="images/IMG_0013.jpg" alt="">
                 </a>
             </div>
             <div class="col-lg-3 col-md-4 col-6">
                 <a href="#" class="d-block mb-4 h-100">
-                    <img class="img-fluid img-thumbnail" src="../images/IMG_0014.jpg" alt="">
+                    <img class="img-fluid img-thumbnail" src="images/IMG_0014.jpg" alt="">
                 </a>
             </div>
             <div class="col-lg-3 col-md-4 col-6">
                 <a href="#" class="d-block mb-4 h-100">
-                    <img class="img-fluid img-thumbnail" src="../images/IMG_0015.jpg" alt="">
+                    <img class="img-fluid img-thumbnail" src="images/IMG_0015.jpg" alt="">
                 </a>
             </div>
             <div class="col-lg-3 col-md-4 col-6">
                 <a href="#" class="d-block mb-4 h-100">
-                    <img class="img-fluid img-thumbnail" src="../images/IMG_0017.jpg" alt="">
+                    <img class="img-fluid img-thumbnail" src="images/IMG_0017.jpg" alt="">
                 </a>
             </div>
             <div class="col-lg-3 col-md-4 col-6">
                 <a href="#" class="d-block mb-4 h-100">
-                    <img class="img-fluid img-thumbnail" src="../images/IMG_0018.jpg" alt="">
+                    <img class="img-fluid img-thumbnail" src="images/IMG_0018.jpg" alt="">
                 </a>
             </div>
             <div class="col-lg-3 col-md-4 col-6">
                 <a href="#" class="d-block mb-4 h-100">
-                    <img class="img-fluid img-thumbnail" src="../images/IMG_0019.jpg" alt="">
+                    <img class="img-fluid img-thumbnail" src="images/IMG_0019.jpg" alt="">
                 </a>
             </div>
         </div>
@@ -114,7 +114,7 @@
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.9.0/slick.min.js"></script>
-    <script src="../js/slickcontrol.js"></script>
+    <script src="js/slickcontrol.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>  
 </body>
