--- a/index.html
+++ b/index.html
@@ -29,8 +29,8 @@
                     <div id="navigacija">
                         <ul class="navbar-nav">
                             <li class="nav-item"><a class="nav-link" href="index.html">Home</a></li>
-                            <li class="nav-item"><a class="nav-link" href="html/gallery.html">Portfolio</a></li>
-                            <li class="nav-item"><a class="nav-link" href="html/contact.html">Contact</a></li>
+                            <li class="nav-item"><a class="nav-link" href="gallery.html">Portfolio</a></li>
+                            <li class="nav-item"><a class="nav-link" href="contact.html">Contact</a></li>
                         </ul>
                     </div>
                     
