Promjenjeni linkovi i obrisane nepotrebne stvari

--- a/gallery.html
+++ b/gallery.html
@@ -11,7 +11,7 @@
     <script type="text/javascript" src="https://code.jquery.com/jquery-3.4.1.js"></script>
     <script type="text/javascript" src="https://code.jquery.com/jquery-migrate-3.1.0.js"></script>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
-    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.2/css/all.css" integrity="sha384-fnmOCqbTlWIlj8LyTjo7mOUStjsKC4pOpQbqyi7RrhN7udi9RwhKkMHpvLbHG9Sr" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.2/css/all.min.css" integrity="sha512-HK5fgLBL+xu6dm/Ii3z4xhlSUyZgTT9tuc/hSrtw6uzJOvgRr2a9jyxxT1ely+B+xFAmJKVSTbpM/CuL7qxO8w==" crossorigin="anonymous" />
     <title>Marina Tovirac | Photography</title>
 </head>
 <body>
@@ -105,9 +105,9 @@
         <footer>
             <p>Marina Tovirac &copy; 2019; All rights reserved.</p>
             <div id="social">
-                <a role="button" href="https://www.facebook.com/"><i class="fab fa-facebook-f"></i></a>
+                <a role="button" href="https://github.com/marinatovirac"><i class="fab fa-github"></i>
                 <a role="button" href="https://www.instagram.com/unapasseggera"><i class="fab fa-instagram"></i></a>
-                <a role="button" href="https://www.youtube.com"><i class="fab fa-youtube"></i></a>
+                <a role="button" href="https://www.tiktok.com/@unapasseggera"><i class="fab fa-tiktok"></i>
             </div>
         </footer>
     </div>
