Dodala sam nove fotografije i napravila galeriju

--- a/contact.html
+++ b/contact.html
@@ -42,10 +42,16 @@
             <div class="container py-3">
                 <div class="info-left">
                     <h1>Biography</h1>
-                    <p>its britney bitch!</p>
+                    <p>I capture beauty that holds in every person. Everyone being different is what is really beatiful. If we were all the same, it would be boring.<br>
+                        I am based in Belgrade, Serbia - but  I will take any opportunity to travel!
+                        When I'm not taking photos, you will find me in kitchen learning new recipes, playing with my dog, dancing  or spending time with my family and friends.
+                        
+                        <p>If you have an upcoming project, I would love to collaborate with you!</p> 
+                        <p>  Get in touch with me using my contact form to discuss rates, scheduling and more.</p>
+                       </p>
                 </div>
                 <div class="info-right">
-                        <img src="images/IMG_0000.jpg" alt="portrait">
+                        <img src="images/index/IMG_0000.jpg" alt="portrait">
                 </div>
             </div>
         </section>
@@ -97,7 +103,7 @@
         </div>
     </section>
     <footer>
-        <p>Marina Tovirac &copy; 2019; All rights reserved.</p>
+        <p>Marina Tovirac &copy; 2021; All rights reserved.</p>
         <div id="social">
             <a role="button" href="https://github.com/marinatovirac"><i class="fab fa-github"></i>
             <a role="button" href="https://www.instagram.com/unapasseggera"><i class="fab fa-instagram"></i></a>
