--- a/index.html
+++ b/index.html
@@ -39,16 +39,16 @@
         </header>
         <main>
             <div class="galerija">
-                <div><img src="images/IMG_0001.jpg" alt="Alt text" srcset="images/IMG_0001.jpg 600w" sizes="(min-width: 1200px) 500px, (min-width: 768px) 400px, (min-width: 375px) 300px, (min-width: 320px) 250px, calc(100vw - 36px)"></div>
-                <div><img src="images/IMG_0002.jpg" alt="Alt text" srcset="images/IMG_0002.jpg 600w" sizes="(min-width: 1200px) 500px, (min-width: 768px) 400px, (min-width: 375px) 300px, (min-width: 320px) 250px, calc(100vw - 36px)"></div>
-                <div><img src="images/IMG_0003.jpg" alt="Alt text" srcset="images/IMG_0003.jpg 600w" sizes="(min-width: 1200px) 500px, (min-width: 768px) 400px, (min-width: 375px) 300px, (min-width: 320px) 250px, calc(100vw - 36px)"></div>
-                <div><img src="images/IMG_0004.JPG" alt="Alt text" srcset="images/IMG_0004.JPG 600w" sizes="(min-width: 1200px) 500px, (min-width: 768px) 400px, (min-width: 375px) 300px, (min-width: 320px) 250px, calc(100vw - 36px)"></div>
-                <div><img src="images/IMG_0005.JPG" alt="Alt text" srcset="images/IMG_0005.JPG 600w" sizes="(min-width: 1200px) 500px, (min-width: 768px) 400px, (min-width: 375px) 300px, (min-width: 320px) 250px, calc(100vw - 36px)"></div>
-                <div><img src="images/IMG_0006.jpg" alt="Alt text" srcset="images/IMG_0006.jpg 600w" sizes="(min-width: 1200px) 500px, (min-width: 768px) 400px, (min-width: 375px) 300px, (min-width: 320px) 250px, calc(100vw - 36px)"></div>
+                <div><img src="images/index/IMG_0001.jpg" alt="Alt text" srcset="images/index/IMG_0001.jpg 600w" sizes="(min-width: 1200px) 500px, (min-width: 768px) 400px, (min-width: 375px) 300px, (min-width: 320px) 250px, calc(100vw - 36px)"></div>
+                <div><img src="images/index/IMG_0002.jpg" alt="Alt text" srcset="images/index/IMG_0002.jpg 600w" sizes="(min-width: 1200px) 500px, (min-width: 768px) 400px, (min-width: 375px) 300px, (min-width: 320px) 250px, calc(100vw - 36px)"></div>
+                <div><img src="images/index/IMG_0003.jpg" alt="Alt text" srcset="images/index/IMG_0003.jpg 600w" sizes="(min-width: 1200px) 500px, (min-width: 768px) 400px, (min-width: 375px) 300px, (min-width: 320px) 250px, calc(100vw - 36px)"></div>
+                <div><img src="images/index/IMG_0004.JPG" alt="Alt text" srcset="images/index/IMG_0004.JPG 600w" sizes="(min-width: 1200px) 500px, (min-width: 768px) 400px, (min-width: 375px) 300px, (min-width: 320px) 250px, calc(100vw - 36px)"></div>
+                <div><img src="images/index/IMG_0005.JPG" alt="Alt text" srcset="images/index/IMG_0005.JPG 600w" sizes="(min-width: 1200px) 500px, (min-width: 768px) 400px, (min-width: 375px) 300px, (min-width: 320px) 250px, calc(100vw - 36px)"></div>
+                <div><img src="images/index/IMG_0006.jpg" alt="Alt text" srcset="images/index/IMG_0006.jpg 600w" sizes="(min-width: 1200px) 500px, (min-width: 768px) 400px, (min-width: 375px) 300px, (min-width: 320px) 250px, calc(100vw - 36px)"></div>
             </div>
         </main>
         <footer>
-            <p>Marina Tovirac &copy; 2019; All rights reserved.</p>
+            <p>Marina Tovirac &copy; 2021; All rights reserved.</p>
             <div id="social">
                 <a role="button" href="https://github.com/marinatovirac"><i class="fab fa-github"></i>
                 <a role="button" href="https://www.instagram.com/unapasseggera"><i class="fab fa-instagram"></i></a>
