--- a/contact.html
+++ b/contact.html
@@ -82,18 +82,24 @@
             </div>
         </div>
     </section>
+    <section>
+        <div id="map">
+            <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d181139.35491648177!2d20.282514448937967!3d44.815403288471224!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x475a7aa3d7b53fbd%3A0x1db8645cf2177ee4!2z0JHQtdC-0LPRgNCw0LQ!5e0!3m2!1ssr!2srs!4v1632685217917!5m2!1ssr!2srs" 
+            width="600" height="450"  allowfullscreen="" loading="lazy"></iframe>
+        </div>
+    </section>
     <section id="contact-form" class="py-3">
         <div class="container">
             <h2>Contact me</h2>
             <p>Please fill this form</p>
-            <form>
+            <form action="https://formspree.io/f/xyyloqqb" method="POST">
                 <div class="form-group">
                     <label for="name">Name</label>
                     <input type="text" name="name" id="name">
                 </div>
                 <div class="form-group">
                     <label for="email">Email</label>
-                    <input type="email" name="email" id="email">
+                    <input type="email" name="_replyto" id="email">
                 </div>
                 <div class="form-group">
                 <label for="message">Message</label>
