--- a/contact.html
+++ b/contact.html
@@ -64,7 +64,7 @@
               <div class="col-sm">
                 <h1 class="fas fa-phone"></h1>
                 <p>
-                    <a href="tel:+381642361395">+381642361395</a>
+                    <a href="tel:+381601427042">+381601427042</a>
                 </p>
               </div>
               <div class="col-sm">
@@ -76,7 +76,7 @@
               <div class="col-sm">
                 <h1 class="fab fa-instagram"></h1>
                 <p>
-                    <a  href="https://www.instagram.com/unapasseggera">@unapasseggera</a>a
+                    <a  href="https://www.instagram.com/unapasseggera">@unapasseggera</a>
                 </p>
               </div>
             </div>
